# clang-chimera

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: .gitignore
doc/guide/tex/: .gitignore  guide.tex
include/: Log.h  Utils.h
include/Core/: Mutant.h  MutationOperator.h  MutationTemplate.h  Mutator.h
include/Operators/: Operators.h
include/Operators/Examples/: Mutators.h  Operators.h
include/Operators/FLAP/: Mutators.h  Operator.h  Operators.h
include/Operators/LoopFirst/: Mutators.h  Operator.h
include/Operators/LoopPerforation/: Mutators.h  Operator.h
include/Operators/LoopSecond/: Mutators.h  Operator.h
include/Operators/VPA/: Mutators.h  Operator.h
include/Operators/VPA_Native/: Mutators.h  Operator.h
include/Operators/Ward-Armstrong/: Mutators.h  Operators.h
include/Testing/: ChimeraTest.h  MutatorsTesting.h
include/Tooling/: ChimeraTool.h  CompilationDatabaseUtils.h  FrontendActions.h
src/: CMakeLists.txt  Doxyfile.in  Log.cpp  Utils.cpp  main.cpp
src/Core/: CMakeLists.txt  MutationOperator.cpp  MutationTemplate.cpp
src/Operators/: .gitignore  CMakeLists.txt
src/Operators/Examples/: CMakeLists.txt  Mutators.cpp  Operators.cpp
src/Operators/FLAP/: CMakeLists.txt  Mutators.cpp  Operators.cpp
src/Operators/LoopFirst/: CMakeLists.txt  Mutators.cpp  Operators.cpp
src/Operators/LoopPerforation/: CMakeLists.txt  Mutators.cpp  Mutators.cpp.bkup  Operators.cpp
src/Operators/LoopSecond/: CMakeLists.txt  Mutators.cpp  Operators.cpp
src/Operators/VPA/: CMakeLists.txt  Mutators.cpp  Operators.cpp
src/Operators/VPA_Native/: CMakeLists.txt  Mutators.cpp  Operators.cpp
src/Testing/: CMakeLists.txt  ChimeraTest.cpp
src/Testing/mutators/mutator_array_ref_stuck_data/: test_0.cpp  test_0_mutants.cpp
src/Testing/mutators/mutator_if_condition_true_false/: test_0.cpp  test_0_match.csv
src/Testing/mutators/mutator_int_ref_stuck_data/: test_0_match.csv  test_0_mutants.cpp
src/Testing/mutators/mutator_member_expr_stuck_data/: test_0_mutants.cpp
src/Tooling/: CMakeLists.txt  ChimeraTool.cpp  CompilationDatabaseUtils.cpp  FrontendActions.cpp
test/mutators/: .gitignore
test/mutators/mutator_array_ref_stuck_data/: test_0_match.csv
test/mutators/mutator_greater_op_replacement/: test_0.cpp  test_0_match.csv
test/mutators/mutator_if_condition_true_false/: test_0_mutants.cpp
test/mutators/mutator_member_expr_stuck_data/: test_0.cpp  test_0_match.csv
